work page mobile spacing fix

--- a/wp-content/themes/frank-collective/assets/sass/pages/_work.scss
+++ b/wp-content/themes/frank-collective/assets/sass/pages/_work.scss
@@ -45,7 +45,7 @@
         margin-bottom: 50px;
         @include media('<=tablet') {
             width: 100%;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
         }
     }
     .work-item {
